<resources>
    <string name="app_name">Hockey News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_groups">Groups</string>
    <string name="title_team">Team</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_store">Store</string>
    <string name="esp">https://vectorflags.s3.amazonaws.com/flags/es-circle-01.png</string>
    <string name="ger">https://www.isola-group.com/wp-content/uploads/German-Flag-Circle.png</string>
    <string name="bel">https://static.vecteezy.com/system/resources/previews/011/571/460/non_2x/circle-flag-of-belgium-free-png.png</string>
    <string name="ned">https://www.iconpacks.net/icons/5/free-icon-netherlands-flag-circular-17752.png</string>
    <string name="nzl">https://www.iconpacks.net/icons/5/free-icon-new-zealand-flag-circular-17879.png</string>
    <string name="usa">https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/United-states_flag_icon_round.svg/1024px-United-states_flag_icon_round.svg.png</string>
    <string name="can">https://www.iconpacks.net/icons/5/free-icon-canada-flag-circular-17758.png</string>
    <string name="lat">https://static.vecteezy.com/system/resources/previews/011/571/343/original/circle-flag-of-latvia-free-png.png</string>
    <string name="rules1">Ice hockey is a team sport played on ice in which the goal is to shoot the puck into the opponents goal more times than the opposing team does in a set time. The puck is passed from player to player across the ice court with special hockey sticks. The team that scores the most goals in the opponents goal wins.</string>
    <string name="rules2">The history of the emergence and development of ice hockey</string>
    <string name="rules3">Disputes about where and when hockey appeared do not stop to this day. The official birthplace of modern hockey is considered to be Montreal (Canada). Another popular view is that hockey originated in Holland. There are paintings by Dutch masters dating back to the 16th century showing people playing a game similar to hockey. But whatever it was in Holland, in Montreal at the Victoria rink, on March 3, 1875, the first officially recorded hockey match was played. Two years later, the first seven rules of hockey were invented. In 1879, the wooden washer was replaced by its rubber alternative. In 1886, improved rules of the game were streamlined and printed: the number of players was reduced to seven; the entire match from start to finish was played by one squad; only injured players were allowed to be substituted and after the consent of the opposing team. The first professional hockey team was formed in Canada in 1904. In the same year, the teams were reduced to six players. The standard size of the site was established - 56 × 26 m, which has changed little since then. It became possible to replace players not only because of injuries. Later, the Patrick brothers introduced a system for assigning a number to each player, a new scoring system, marking the court into certain zones. In 1945, multi-colored lights were installed outside the goal to more accurately count goals.</string>
    <string name="rules4">Modern ice hockey rules define the following important points: an ice hockey match consists of three periods, each period lasting 20 minutes; each period begins with a puck face-off and ends with the referees whistle; the puck is thrown in by the referee; between periods there are 15 minute breaks, which are accompanied by a change of gates; six players can be on the field at the same time, while a full hockey team consists of 20-25 people; replacement of players occurs both in pauses and during the game; power wrestling is allowed in hockey; in power wrestling, the following are prohibited: tripping, delaying an opponent, elbow strikes, as well as attacking a player who does not own the puck; the regular time of the game may end in a draw and there will be overtime, after which a shootout may follow; for violations, athletes are sent to the penalty box.</string>    <string name="rules5">Размеры хоккейных площадок разнятся в зависимости от правил (НХЛ или ИИХФ). По версии ИИХФ размеры площадки могут варьироваться от 56 – 60 метров в длину и 26 – 30 метров в ширину. В НХЛ размеры площадки строго фиксированы 60,96 метров в дину и 25,90 метров в ширину. Считается, что меньшая площадка приводит к более красочной игре, а именно к силовой борьбе, броскам по воротам и игре у бортов. Углы площадки должны быть скруглены дугой окружности радиусом от 7 м до 8,5 м по правилам ИИХФ и 8,53 м в НХЛ. Площадка обязательно должна быть ограждена бортиком высотой 1,20 – 1,22 метров. На лицевых бортах за воротами по всей ширине поля (включая закругления) крепится ограждение из защитного стекла высотой 1,6-2 м. Хоккейная площадка размечена следующим образом: на расстоянии 3 – 4 метров от бортов проведены лицевые линии (линии ворот); на расстоянии 17,23 метров от линии ворот проведены синие линии зон, благодаря которым площадка разделяется на 3 зоны: центральную и две зоны соперников; в центре поля находится красная линия, разделяющая площадку пополам, и точка вбрасывания, находящаяся посередине красной линии; по обе стороны от ворот на расстоянии 6 метров нарисованы точки вбрасывания с зоной вбрасывания радиусом 4,5 метра.</string>
    <string name="rules6">There are a total of nine throw-in spots on the ice hockey rink: the center spot; four face-off endpoints (two in each zone); four face-off spots in the neutral zone. The hockey rink is equipped with two benches for penalized players.</string>
    <string name="rules7">The goal in ice hockey consists of two posts (vertical posts) that are on the goal line at an equal distance from the sides and connected at the top by a horizontal crossbar. The distance between the bars (width) is 1.83 m, and the distance from the lower edge of the crossbar to the ice surface (height) is 1.22 m. The diameter of the crossbar and both bars is no more than 5 cm.</string>    <string name="bonus_text">Earn points to preview match results</string>
</resources>