<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.hockeynews.presentation.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bonus_coin"
        android:name="com.test.hockeynews.presentation.fragments.BonusFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/navigation_rules"
        android:name="com.test.hockeynews.presentation.fragments.RulesFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_rules" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.test.hockeynews.presentation.fragments.TableFragment"
        android:label="@string/title_transfer"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_assistant"
        android:name="com.test.hockeynews.presentation.fragments.AssistantFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_assistant" />

</navigation>
