<?xml version="1.0" encoding="utf-8"?><!-- fragment_team.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232C6C"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/teamSizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="Hockey"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playerFunctionsImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/functions_of_players_image"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />


        <TextView
            android:id="@+id/rulesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/hockey_img1"
            app:shapeAppearanceOverlay="@style/RoundedImageView1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="Правила хоккея с шайбой на льду (кратко)"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/hockey_img2"
            app:shapeAppearanceOverlay="@style/RoundedImageView1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="Хоккейная площадка"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules5"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/hockey_img3"
            app:shapeAppearanceOverlay="@style/RoundedImageView1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules6"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="Размер ворот в хоккее с шайбой"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/rules7"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
